Add trace reconstruction and tests. Refactor span repository for better readability
